# SuperVM

./: .editorconfig  .gitignore  ASSETS-README.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  INSTALLATION-GUIDE.md  L0-COMPLETION-REPORT.md  L0-UPGRADE-REPORT-2025-11-11.md  L05-MULTICORE-RESULTS.md  L06-L07-LAUNCH-SUMMARY.md  L06-L07-PROGRESS-2025-11-11.md  L07-BULLETPROOFS-COMPLETION-REPORT.md  LICENSE  NEXT-STEPS-2025-11-11.md  PHASE5-METRICS-2025-11-10.md  PHASE5-METRICS.md  QUICK-START-ASSETS.md  README-PoC.md  README.md  ROADMAP-UNIFIED.md  ROADMAP-ZK-Privacy.md  ROADMAP-v2.md  ROADMAP.md  ROADMAP.md.bak  SUMMARY.md  TPS-1.3M-VERIFICATION-REPORT.md  WHITEPAPER.md  WHITEPAPER_EN.md  adaptive_bench_results.csv  adaptive_compare_results.csv  bench_consensus_only_output.txt  bench_mixed_path_output.txt  bench_partitioned_fastpath_results.csv  bench_retry_output.txt  bench_test_p2.txt  bulletproofs_compare_output.txt  bulletproofs_test_output.txt  (+25 more)
.github/: MAINTAINERS  PR_TEMPLATE.md  (+1 more)
privacy-test/: Cargo.toml
privacy-test/benches/: privacy_benchmarks.rs
privacy-test/src/: hash_to_point.rs  lib.rs  main.rs  pedersen_commitment.rs  ristretto_basics.rs  simple_ring_signature.rs
src/gpu-executor/: Cargo.toml  README.md
src/gpu-executor/examples/: hybrid_scheduler_demo.rs  parallel_cpu_demo.rs  strategy_decisions_demo.rs  vector_add_demo.rs
src/gpu-executor/src/: gpu_backend.rs  lib.rs
src/gpu-executor/tests/: basic.rs  gpu_integration.rs
src/l2-executor/: Cargo.toml  README.md  RISC0-POC-README.md  build.rs  config.example.toml
src/l2-executor/benches/: l2_benchmark.rs
src/l2-executor/examples/: adaptive_optimization_demo.rs  aggregation_strategy_demo.rs  backend_comparison.rs  integration_demo.rs  integration_test.rs  metrics_demo.rs  metrics_server.rs  performance_demo.rs  production_validation.rs  recursive_aggregation.rs  recursive_aggregation_analysis.rs  risc0_performance_comparison.rs  runtime_usage.rs  stress_test.rs
src/l2-executor/methods/aggregator/: Cargo.toml
src/l2-executor/methods/aggregator/src/: main.rs
src/l2-executor/methods/fibonacci/: Cargo.toml
src/l2-executor/methods/fibonacci/src/: lib.rs  main.rs
src/l2-executor/src/: aggregation.rs  aggregator.rs  backend_trait.rs  lib.rs  metrics.rs  optimized.rs  program.rs  proof.rs  risc0_backend.rs  runtime.rs  sp1_backend.rs  zkvm.rs
src/node-core/: Cargo.toml
src/node-core/examples/: auto_tuner_demo.rs  bloom_enhanced_bench.rs  bloom_fair_bench.rs  bloom_filter_bench.rs  chat_poc.rs  concurrent_conflict_bench.rs  demo10_auto_gc.rs  demo7_work_stealing.rs  demo8_batch_operations.rs  demo9_mvcc.rs  ownership_sharding_mixed_bench.rs  rocksdb_adaptive_batch_bench.rs  rocksdb_batch_size_bench.rs  rocksdb_demo.rs  rocksdb_monitor.rs
src/node-core/src/: main.rs
src/vm-runtime/: Cargo.toml  build.rs  perf_matrix_results.txt  prover_output.txt  prover_pool_output.txt
src/vm-runtime/benches/: flush_batch_benchmark.rs  hybrid_benchmark.rs  parallel_benchmark.rs  retry_policy_benchmark.rs
src/vm-runtime/data/batch_param_bench/: results.csv
src/vm-runtime/examples/: batch_pipeline_2pc_bench.rs  concurrent_batch_2pc_bench.rs  congestion_control_demo.rs  cross_shard_demo.rs  cross_shard_minimal.rs  cross_shard_privacy_demo.rs  cross_shard_txn_demo.rs  e2e_three_channel_test.rs  fastpath_latency_demo.rs  format_bn254_proof_calldata.rs  generate_bn254_multiply_sol_verifier.rs  generate_ringct_bn254_verifier.rs  generate_ringct_sol_verifier.rs  metrics_demo.rs  metrics_http_demo.rs  mixed_path_bench.rs  multi_core_consensus_bench.rs  mvcc_auto_flush_demo.rs  mvcc_longrun_bench.rs  partitioned_fast_path_bench.rs  persistence_consistency_test.rs  prover_pool_demo.rs  proving_key_cache_demo.rs  quick_flush_bench.rs  quick_metrics_verify.rs  quick_retry_bench.rs  real_zk_demo.rs  rocksdb_metrics_demo.rs  routing_metrics_http_demo.rs  stability_test_24h.rs  state_pruning_demo.rs  storage_metrics_http.rs  two_pc_consensus_bench.rs  zk_batch_param_bench.rs  zk_batch_vs_single_bench.rs  zk_e2e_batch_flow.rs  zk_latency_bench.rs  zk_parallel_bench.rs  zk_parallel_http_bench.rs
src/vm-runtime/src/: adaptive_router.rs  auto_flush_tests.rs  auto_tuner.rs  bloom_filter.rs  cross_shard_mvcc.rs  crypto.rs  execution_trait.rs  host.rs  host.rs.patch.todo  host.rs.patch.todo.2  lib.rs  metrics.rs  metrics_tests.rs  multi_core_consensus.rs  mvcc.rs  optimized_mvcc.rs  ownership.rs  parallel.rs  parallel_mvcc.rs  partitioned_fastpath.rs  retry_policy_tests.rs  shard_coordinator.rs  shard_types.rs  state_pruning_tests.rs  storage.rs  supervm.rs  two_phase_consensus.rs  zk_verifier.rs
src/vm-runtime/src/privacy/: batch_verifier.rs  commitment.rs  groth16_verifier.rs  mod.rs  parallel_prover.rs  range_proof.rs  ring_signature.rs  solidity_verifier.rs  stealth_address.rs  types.rs  zksnark.rs
src/vm-runtime/src/shard/: mod.rs
src/vm-runtime/src/storage/: rocksdb_storage.rs
src/vm-runtime/tests/: adaptive_router_tests.rs  batch_verify_extended.rs  fallback_tests.rs  hybrid_exec_tests.rs  hybrid_metrics_tests.rs  mvcc_flush_batch_tests.rs  mvcc_stress_test.rs  parallel_mvcc_stress.rs  perf_matrix.rs  privacy_verifier_tests.rs  retry_policy_tests.rs  smoke_routing.rs  test_helpers.rs  zk_verify_latency_tests.rs
zk-groth16-test/: ADVERSARIAL_TESTS_REPORT.md  BULLETPROOFS_PLAN.md  Cargo.toml  MULTI_UTXO_REPORT.md  OPTIMIZATION_REPORT.md  README.md  RING_SIGNATURE_REPORT.md  bench_output.txt  bulletproofs_compare_output.txt
zk-groth16-test/benches/: groth16_benchmarks.rs  ring_signature_benchmarks.rs
zk-groth16-test/examples/: compare_range_proofs.rs  ringct_compressed_perf.rs  ringct_multi_utxo_perf.rs  ringct_optimized_perf.rs  ringct_perf.rs
zk-groth16-test/scripts/: test-ringct-optimized.ps1
zk-groth16-test/src/: bulletproofs_range_proof.rs  combined.rs  lib.rs  pedersen.rs  range_proof.rs  range_proof_aggregated.rs  range_proof_api.rs  ring_signature.rs  ringct.rs  ringct_compressed.rs  ringct_multi_utxo.rs
zk-groth16-test/tests/: adversarial_tests.rs
(+461 files in other folders)
