[workspace]
members = [
    "src/vm-runtime",
    "src/node-core",
    "privacy-test",
    "zk-groth16-test",
    "halo2-eval",
    "src/gpu-executor",
    # 注意: Truly-friendly 为本地目录，默认不加入 workspace 以避免被编译/提交
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["king <king@example.com>"]
description = "SuperVM - WASM-first VM PoC and workspace"
readme = "README-PoC.md"
repository = "https://github.com/king/supervm"
license = "GPL-3.0-or-later"
