[package]
name = "privacy-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Privacy cryptography practice with curve25519-dalek"
readme.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "privacy-demo"
path = "src/main.rs"

[dependencies]
# Curve25519 椭圆曲线密码学库 (Monero 使用的核心库)
curve25519-dalek = { version = "4", features = ["rand_core"] }

# 随机数生成
rand = "0.8"
rand_core = { version = "0.6", default-features = false }

# 哈希函数
sha2 = "0.10"

# 十六进制编码
hex = "0.4"

# 序列化 (可选, 用于调试)
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "privacy_benchmarks"
harness = false
