[package]
name = "zk-groth16-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Arkworks Groth16 生态（更易用稳定）
ark-ff = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-snark = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["crh", "r1cs", "commitment", "prf"] }
ark-r1cs-std = "0.4"
ark-sponge = "0.4.0-alpha"
ark-ed-on-bls12-381-bandersnatch = { version = "0.4", features = ["r1cs"] }

# 随机数
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "groth16_benchmarks"
harness = false

