[package]
name = "node-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vm-runtime = { path = "../vm-runtime" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wat = "1.0"
rand = "0.8"
futures = "0.3"
libp2p = { version = "0.53", default-features = false, features = [
	"tcp",
	"tokio",
	"dns",
	"noise",
	"yamux",
	"gossipsub",
	"mdns",
	"identify",
	"ping",
	"websocket",
	"quic",
	"relay",
	"dcutr",
	"macros",
] }

[[bin]]
name = "ownership_sharding_mixed_bench"
path = "examples/ownership_sharding_mixed_bench.rs"
