[package]
name = "node-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vm-runtime = { path = "../vm-runtime", features = ["rocksdb-storage"] }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wat = "1.0"
rand = "0.8"
futures = "0.3"
libp2p = { version = "0.53", default-features = false, features = [
	"tcp",
	"tokio",
	"dns",
	"noise",
	"yamux",
	"gossipsub",
	"mdns",
	"identify",
	"ping",
	"websocket",
	"quic",
	"relay",
	"dcutr",
	"macros",
] }

## 注意：examples/ 目录下的文件会自动作为 `[[example]]` 目标被 Cargo 发现。
## 如再声明为 [[bin]] 且路径指向同一文件，会触发重复目标的构建警告。
## 因此这里移除重复的 [[bin]] 声明，改为仅保留 example 形式运行：
##   cargo run -p node-core --example ownership_sharding_mixed_bench --release
