[package]
name = "vm-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmi = "0.31"
wasmtime = "17.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
wat = "1.0"

# 密码学库
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hex = "0.4"

# 并发库
crossbeam-deque = "0.8"
rayon = "1.10"
dashmap = "6.1"
parking_lot = "0.12"

# 序列化库
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[features]
default = []
demos = []
groth16-verifier = [
    "dep:zk-groth16-test",
    "dep:ark-groth16",
    "dep:ark-bls12-381",
    "dep:ark-snark",
    "dep:ark-serialize",
    "dep:ark-crypto-primitives",
    "dep:ark-std",
]

[dependencies.zk-groth16-test]
path = "../../zk-groth16-test"
optional = true

# Arkworks deps used only when feature "groth16-verifier" is enabled
[dependencies.ark-groth16]
version = "0.4"
optional = true

[dependencies.ark-bls12-381]
version = "0.4"
optional = true

[dependencies.ark-snark]
version = "0.4"
optional = true

[dependencies.ark-serialize]
version = "0.4"
optional = true

[dependencies.ark-crypto-primitives]
version = "0.4"
features = ["crh"]
optional = true

[dependencies.ark-std]
version = "0.4"
optional = true

[[bench]]
name = "parallel_benchmark"
harness = false

[[example]]
name = "ownership_demo"
path = "../../examples/ownership_demo.rs"
required-features = ["demos"]

[[example]]
name = "supervm_routing_demo"
path = "../../examples/supervm_routing_demo.rs"

[[example]]
name = "routed_batch_demo"
path = "../../examples/routed_batch_demo.rs"

[[example]]
name = "tps_compare_demo"
path = "../../examples/tps_compare_demo.rs"

[[example]]
name = "fallback_demo"
path = "../../examples/fallback_demo.rs"

[[example]]
name = "tps_compare_fallback_demo"
path = "../../examples/tps_compare_fallback_demo.rs"

[[example]]
name = "high_contention_fallback_demo"
path = "../../examples/high_contention_fallback_demo.rs"

[[example]]
name = "large_scale_tps_bench"
path = "../../examples/large_scale_tps_bench.rs"

[[example]]
name = "mixed_workload_test"
path = "../../examples/mixed_workload_test.rs"

[[example]]
name = "zk_verify_multiply"
path = "../../examples/zk_verify_multiply.rs"
required-features = ["groth16-verifier"]

[[example]]
name = "zk_verify_ring_signature"
path = "../../examples/zk_verify_ring_signature.rs"
required-features = ["groth16-verifier"]

[[example]]
name = "zk_verify_range_proof"
path = "../../examples/zk_verify_range_proof.rs"
required-features = ["groth16-verifier"]

[[example]]
name = "zk_verify_ringct"
path = "../../examples/zk_verify_ringct.rs"
required-features = ["groth16-verifier"]

[[example]]
name = "lfu_hotkey_demo"
path = "../../examples/lfu_hotkey_demo.rs"
